==> XS-dev/STI_STM32_Teaching/PPJ/STM2023Summer/2019D/DDS/并行控制/MSP432_AD9854/AD9854/AD9854.c <==
#include <ti/devices/msp432p4xx/driverlib/driverlib.h>
#include "AD9854.h"
#include <stdint.h>
#include <stdbool.h>
#define SET_RST()       GPIO_setOutputHighOnPin(GPIO_PORT_P2, GPIO_PIN7)//AD9854复位端口    MR -> P2.7
#define CLR_RST()        GPIO_setOutputLowOnPin(GPIO_PORT_P2, GPIO_PIN7)
#define SET_UDCLK()     GPIO_setOutputHighOnPin(GPIO_PORT_P2, GPIO_PIN6) //AD9854更新时钟     UD -> P2.6
#define CLR_UDCLK()     GPIO_setOutputLowOnPin(GPIO_PORT_P2, GPIO_PIN6)
#define SET_WR()        GPIO_setOutputHighOnPin(GPIO_PORT_P2, GPIO_PIN5)//AD9854写使能，低有效  WR -> P2.5
#define CLR_WR()        GPIO_setOutputLowOnPin(GPIO_PORT_P2, GPIO_PIN5)
#define SET_FSK()       GPIO_setOutputHighOnPin(GPIO_PORT_P3, GPIO_PIN7)//AD9854 FSK,PSK控制  FDATA(FSK) -> P3.7
#define CLR_FSK()       GPIO_setOutputLowOnPin(GPIO_PORT_P3, GPIO_PIN7)
#define SET_RD()        GPIO_setOutputHighOnPin(GPIO_PORT_P3, GPIO_PIN5)//AD9854 RD  RD->P3.5
#define CLR_RD()        GPIO_setOutputLowOnPin(GPIO_PORT_P3, GPIO_PIN5)
#define SET_OSK()       GPIO_setOutputHighOnPin(GPIO_PORT_P3, GPIO_PIN6)  //AD9854 OSK控制端          OSK -> P3.6
#define CLR_OSK()       GPIO_setOutputLowOnPin(GPIO_PORT_P3, GPIO_PIN6)  //AD9854 OSK控制端          OSK -> P3.6
#define SET_SP()        GPIO_setOutputHighOnPin(GPIO_PORT_P2, GPIO_PIN3)  //->3.3V
#define AD9854_DataBus (P4OUT)        //           D[7:0] => P4[7:0]
#define AD9854_AdrBus   (P6OUT)        //          A[5:0] => PB[8:3]       A5->PB10 A4->PB9 A3->PB8 A2->PB7 A1->PB6 A0->PB5

void AD9854_IO_Init(void)
{
        P2DIR = 0xe0; //P2.5 P2.6 P2.7 为输出
        P3DIR = 0xe0;//P3.5 P3.6 P3.7 为输出
        P4DIR = 0xff;
        //P5DIR = 0xff;
        P2DIR |=BIT3; //P2.3为输出
        P6DIR = 0xff;
        SET_SP();
}

void AD9854_WR_Byte(uint32_t addr,uint32_t dat)
{

    AD9854_AdrBus = (addr & 0x03)|(addr << 2);
    AD9854_DataBus = dat;

    CLR_WR();
    SET_WR();

}

void AD9854_Init(void)
{
        AD9854_IO_Init();
        SET_SP();
        SET_WR();//将读、写控制端口设为无效
        SET_RD();
        CLR_UDCLK();
        SET_RST();                 //复位AD9854
        CLR_RST();

        AD9854_WR_Byte(0x1d,0x00);             //关闭比较器
        AD9854_WR_Byte(0x1e,CLK_Set);      //设置系统时钟倍频
        AD9854_WR_Byte(0x1f,0x00);     //设置系统为模式0，由外部更新
        AD9854_WR_Byte(0x20,0x60);     //设置为可调节幅度，取消插值补偿

        SET_UDCLK();                                  //更新AD9854输出
        CLR_UDCLK();
}

void AD9854_SetSine(ulong Freq,uint Shape)
{
        uchar count;
        uchar Adress;

        Adress = 0x04;                        //选择频率控制字地址的初值

        Freq_convert(Freq);                //频率转换

        for(count=6;count>0;)             //写入6字节的频率控制字
        {
            AD9854_WR_Byte(Adress++,FreqWord[--count]);
        }

        AD9854_WR_Byte(0x21,Shape>>8);    //设置I通道幅度
        AD9854_WR_Byte(0x22,(uchar)(Shape&0xff));

        AD9854_WR_Byte(0x23,Shape>>8);    //设置Q通道幅度
        AD9854_WR_Byte(0x24,(uchar)(Shape&0xff));

        SET_UDCLK();                                  //更新AD9854输出
        CLR_UDCLK();
}

void AD9854_SetSine_double(double Freq,uint Shape)
{
    uchar count=0;
    uchar Adress;

    Adress=0x04;                             //选择频率控制字1地址的初值

    Freq_double_convert(Freq);                 //频率转换

    for(count=6;count>0;)                       //写入6字节的频率控制字
    {
        AD9854_WR_Byte(Adress++,FreqWord[--count]);
    }

    AD9854_WR_Byte(0x21,Shape>>8);    //设置I通道幅度
    AD9854_WR_Byte(0x22,(uchar)(Shape&0xff));

    AD9854_WR_Byte(0x23,Shape>>8);    //设置Q通道幅度
    AD9854_WR_Byte(0x24,(uchar)(Shape&0xff));

    SET_UDCLK();                                  //更新AD9854输出
    CLR_UDCLK();
}
