==> XS-dev/STI_STM32_Teaching/PPJ/STM2022Autumn/AD9854_Test/AD9854_Test/Core/Src/AD9854/AD9854.c <==
#include "AD9854.h"
#define      CLK_Set            4
#define      CLK_Set            5
#define      CLK_Set            6
#define      CLK_Set            7
#define      CLK_Set            8
#define      CLK_Set            9
#define      CLK_Set            10
#define      CLK_Set            11
#define      CLK_Set            12
#define      CLK_Set            13
#define      CLK_Set            14
#define      CLK_Set            15

void AD9854_IO_Init(void)
{
  GPIO_InitTypeDef GPIO_InitStruct = {0};

  /* GPIO Ports Clock Enable */
  __HAL_RCC_GPIOH_CLK_ENABLE();
  __HAL_RCC_GPIOC_CLK_ENABLE();
  __HAL_RCC_GPIOA_CLK_ENABLE();
  __HAL_RCC_GPIOE_CLK_ENABLE();
  __HAL_RCC_GPIOB_CLK_ENABLE();
  __HAL_RCC_GPIOD_CLK_ENABLE();



  /*Configure GPIO pin Output Level */
  HAL_GPIO_WritePin(GPIOD, DDRST_Pin|DA5_Pin|DD7_Pin|DA4_Pin
                          |DD6_Pin|DA3_Pin|DD5_Pin|DA2_Pin
                          |FSK_Pin, GPIO_PIN_RESET);

  /*Configure GPIO pin Output Level */
  HAL_GPIO_WritePin(GPIOC, DD4_Pin|DA1_Pin|DD3_Pin|DA0_Pin
                          |OSK_Pin, GPIO_PIN_RESET);

  /*Configure GPIO pin Output Level */
  HAL_GPIO_WritePin(GPIOA, DD2_Pin|UDCLK_Pin|DD1_Pin|DD0_Pin, GPIO_PIN_RESET);

  /*Configure GPIO pin Output Level */
  HAL_GPIO_WritePin(GPIOA, WD_Pin|RD_Pin, GPIO_PIN_SET);

  /*Configure GPIO pins : PDPin PDPin PDPin PDPin
                           PDPin PDPin PDPin PDPin
                           PDPin */
  GPIO_InitStruct.Pin = DDRST_Pin|DA5_Pin|DD7_Pin|DA4_Pin
                          |DD6_Pin|DA3_Pin|DD5_Pin|DA2_Pin
                          |FSK_Pin;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_PULLDOWN;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
  HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);
	
  /*Configure GPIO pins : PCPin PCPin PCPin PCPin
                           PCPin */
  GPIO_InitStruct.Pin = DD4_Pin|DA1_Pin|DD3_Pin|DA0_Pin
                          |OSK_Pin;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_PULLDOWN;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
  HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

  /*Configure GPIO pins : PAPin PAPin PAPin PAPin */
  GPIO_InitStruct.Pin = DD2_Pin|UDCLK_Pin|DD1_Pin|DD0_Pin;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_PULLDOWN;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
  HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

  /*Configure GPIO pins : PAPin PAPin */
  GPIO_InitStruct.Pin = WD_Pin|RD_Pin;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_PULLUP;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
  HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

}

void AD9854_WR_Byte(u32 addr,u32 dat)
{
	if((dat &0x01)>>0){DDS_D0_H;}else {DDS_D0_L;}
	if((dat &0x02)>>1){DDS_D1_H;}else {DDS_D1_L;}
	if((dat &0x04)>>2){DDS_D2_H;}else {DDS_D2_L;}
	if((dat &0x08)>>3){DDS_D3_H;}else {DDS_D3_L;}
	if((dat &0x10)>>4){DDS_D4_H;}else {DDS_D4_L;}
	if((dat &0x20)>>5){DDS_D5_H;}else {DDS_D5_L;}
	if((dat &0x40)>>6){DDS_D6_H;}else {DDS_D6_L;}
	if((dat &0x80)>>7){DDS_D7_H;}else {DDS_D7_L;}
		 
	if(( addr&0x20)>>5) {DDS_A5_H;}else {DDS_A5_L;}
	if(( addr&0x10)>>4) {DDS_A4_H;}else {DDS_A4_L;}
	if(( addr&0x08)>>3) {DDS_A3_H;}else {DDS_A3_L;}
	if(( addr&0x04)>>2) {DDS_A2_H;}else {DDS_A2_L;}
	if(( addr&0x02)>>1) {DDS_A1_H;}else {DDS_A1_L;}
	if(( addr&0x01)>>0) {DDS_A0_H;}else {DDS_A0_L;}
	
	AD9854_WR_L;
	AD9854_WR_H;
}

void AD9854_Init(void)
{
	AD9854_IO_Init();
	AD9854_WR_H;//将读、写控制端口设为无效
	AD9854_RD_H;
	AD9854_UDCLK_L;
	AD9854_RST_H;                 //复位AD9854
	AD9854_RST_L;

	AD9854_WR_Byte(0x1d,0x00);					//打开比较器
	//	AD9854_WR_Byte(0x1d,0x10);	    //关闭比较器
	AD9854_WR_Byte(0x1e,CLK_Set);	   		//设置系统时钟倍频            
	AD9854_WR_Byte(0x1f,0x00);	   			//设置系统为模式0，由外部更新
	AD9854_WR_Byte(0x20,0x60);	   			//设置为可调节幅度，取消插值补偿

	AD9854_UDCLK_H;               			//更新AD9854输出
	AD9854_UDCLK_L;
}

void AD9854_SetSine(ulong Freq,uint Shape)
{
	uchar count;
	uchar Adress;

	Adress = 0x04;                        //选择频率控制字地址的初值

	Freq_convert(Freq);		           //频率转换

	for(count=6;count>0;)	          //写入6字节的频率控制字  
	{
		AD9854_WR_Byte(Adress++,FreqWord[--count]);
	}

	AD9854_WR_Byte(0x21,Shape>>8);	  //设置I通道幅度
	AD9854_WR_Byte(0x22,(uchar)(Shape&0xff));

	AD9854_WR_Byte(0x23,Shape>>8);	  //设置Q通道幅度
	AD9854_WR_Byte(0x24,(uchar)(Shape&0xff));

	AD9854_UDCLK_H;                    //更新AD9854输出
	AD9854_UDCLK_L;
}

void AD9854_SetSine_double(double Freq,uint Shape)
{
	uchar count=0;
	uchar Adress;

	Adress=0x04;						     //选择频率控制字1地址的初值

	Freq_double_convert(Freq);		           //频率转换

	for(count=6;count>0;)	                    //写入6字节的频率控制字  
	{
		AD9854_WR_Byte(Adress++,FreqWord[--count]);
	}

	AD9854_WR_Byte(0x21,Shape>>8);	  //设置I通道幅度
	AD9854_WR_Byte(0x22,(uchar)(Shape&0xff));

	AD9854_WR_Byte(0x23,Shape>>8);	  //设置Q通道幅度
	AD9854_WR_Byte(0x24,(uchar)(Shape&0xff));

	AD9854_UDCLK_H;                    //更新AD9854输出
	AD9854_UDCLK_L;
}
